# visual

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  RELEASE_NOTES.md
.github/workflows/: build-release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/project/: VISUAL_BACKLOG.md  VISUAL_CODEX_CHATGPT_WORKFLOW.md  VISUAL_DECISIONS.md  VISUAL_QA_CHECKLIST.md  VISUAL_RELEASE_LOG.md
scripts/: package-macos-release.sh  package-windows-release.ps1
